--- a/styles/index.css
+++ b/styles/index.css
@@ -67,46 +67,46 @@
 .middle-child p {
   font-size: 0.8rem;
 }
- #top-middle {
-    display: flex;
-    align-items: center;
-  }
+#top-middle {
+  display: flex;
+  align-items: center;
+}
 
-  #top-middle input {
-    /* margin: 6px auto; */
-    height: 26px;
-    width: 60%;
-    border-radius: 12px;
-    background-color: rgb(84, 76, 76);
-    color: #fff;
-    padding: 5px;
-    border: none;
-    outline: none;
-    margin-left: 23px;
-    text-align: center;
-    font-size: 11px;
-  }
+#top-middle input {
+  /* margin: 6px auto; */
+  height: 26px;
+  width: 60%;
+  border-radius: 12px;
+  background-color: rgb(84, 76, 76);
+  color: #fff;
+  padding: 5px;
+  border: none;
+  outline: none;
+  margin-left: 23px;
+  text-align: center;
+  font-size: 11px;
+}
 
-  .notification {
-    display: inline-flex;
-    align-items: center;
-    margin-left: 20px;
-  }
+.notification {
+  display: inline-flex;
+  align-items: center;
+  margin-left: 20px;
+}
 
-
-.notification span{
+.notification span {
   margin-left: 12px;
 }
 
 .notification select {
   margin-left: 11px;
-  border-radius:3px 3px 4px 4px;
+  border-radius: 5px 5px 5px 5px;
   height: 21px;
   width: 11em;
-  font-size: 11px;
+  font-size: 13px;
   outline: none;
   text-align: center;
-
+  background-color: rgb(84, 76, 76);
+  color: rgb(204, 200, 200);
 }
 .photo-icon {
   margin-left: 8px;
