--- a/styles/index.css
+++ b/styles/index.css
@@ -14,9 +14,9 @@
   grid-template-columns: 10% 70% 19%;
   grid-gap: 2px; /* Gap between grid items */
   padding: 10px;
-  height: auto;
+  height: 680px;
   width: 90%;
-  margin: 12px auto;
+  margin: 12px auto 4px auto;
   border-radius: 13px;
   color: aliceblue;
 }
@@ -27,7 +27,7 @@
   text-align: center;
   font-weight: bold;
   font-size: medium;
-  height: 550px;
+  height: 100%;
 }
 
 /* =================================== side bar styling  ================================================*/
@@ -53,19 +53,23 @@
 
 #middle {
   display: grid;
-  grid-template-rows: 7% 25% 45% 23%;
+  grid-template-rows: 7% 35% 45%;
 }
 
 /* ============== structureing midd-children ===================*/
 .middle-child {
   background-color: rgb(27, 25, 25);
-  border-bottom: 0.23px solid rgb(128, 123, 123);
   text-align: left;
   text-decoration: wavy;
+  border: 1px solid #8a8686;
 }
 
 .middle-child p {
-  font-size: 0.8rem;
+  font-size: 16px;
+  font-family: "Kanit", sans-serif;
+  width: 60%;
+  margin-left: 6px;
+  margin-bottom: 0px;
 }
 #top-middle {
   display: flex;
@@ -75,7 +79,7 @@
 #top-middle input {
   /* margin: 6px auto; */
   height: 26px;
-  width: 60%;
+  width: 50%;
   border-radius: 12px;
   background-color: rgb(84, 76, 76);
   color: #fff;
@@ -85,6 +89,7 @@
   margin-left: 23px;
   text-align: center;
   font-size: 11px;
+  font-family: "Kanit", sans-serif;
 }
 
 .notification {
@@ -97,16 +102,32 @@
   margin-left: 12px;
 }
 
-.notification select {
+.custom-select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: transparent;
+  border: 1px solid #8a8686;
+  border-radius: 4px;
+  padding: 6px 8px;
   margin-left: 11px;
-  border-radius: 5px 5px 5px 5px;
-  height: 21px;
-  width: 11em;
-  font-size: 13px;
-  outline: none;
+  font-size: 14px;
+  color: #272424;
+  width: 170px;
+  height: 30px; /* Adjust the height as desired */
+  line-height: 1.5;
+  background-image: url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/icons/chevron-down.svg");
+  background-repeat: no-repeat;
+  background-position: right 8px center;
+  background-size: 16px 16px;
+  padding-right: 30px;
   text-align: center;
-  background-color: rgb(84, 76, 76);
-  color: rgb(204, 200, 200);
+  filter: invert(1);
+}
+
+.custom-select option {
+  background-color: #9d9393;
+  color: #f7f1f1;
 }
 .photo-icon {
   margin-left: 8px;
@@ -124,6 +145,7 @@
 #right p {
   font-size: 0.8rem;
   margin-top: 4px;
+  margin-bottom: 0px;
 }
 
 #close {
